2001-10-02  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/python.am (install-%DIR%PYTHON,
	uninstall-%DIR%PYTHON): Strip path of source file.
	(clean-python): Comment out.

2001-10-02  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_python): Use require_conf_file_with_conf_line
	instead of require_file_with_conf_line, so that elisp-comp and
	py-compile are installed in the aux-directory.
	(handle_emacs_lisp): Likewise.  Define elisp_comp.
	* lib/am/lisp.am (.el.elc): Use elisp_comp.

2001-10-01  Akim Demaille  <akim@epita.fr>

	* lib/am/distdir.am (distcheck): Report the trailing files.
	Run `dist-gzip', not `dist', as it may leave other distribution
	flavors.

2001-09-29  Paul Eggert  <eggert@twinsun.com>

	* lib/mkinstalldirs: Use "mkdir -p" if it works, as that fixes
	bugs when making file names with unusual characters.  Quote chmod
	arg "$dirmode", in case it contains white space.

	Incorporate the following change from autoconf mkinstalldirs:

	1999-04-10  Ben Elliston  <bje@cygnus.com>

	Add `-m' flag to specify the mode of a newly created
	directory.  Add command line usage and `-h', `--help' options.
	Contributed by Jeff Garzik.

2001-09-27  Akim Demaille  <akim@epita.fr>

	* m4/cond.m4, m4/init.m4, m4/header.m4: Remove Autoconf 2.13 code.

2001-09-27  Akim Demaille  <akim@epita.fr>

	* lib/am/distdir.am (dist): Rename as...
	(dist-gzip): this.
	(dist): Additional name for dist-all.
	* automake.texi (Options, Dist): Adjust.

2001-09-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* aclocal.in (obsolete_macros): Update AM_EXEEXT message.
	* automake.in (obsolete_macros): Likewise.
	(seen_objext): Remove (unused).
	(scan_one_autoconf_file): Don't handle AC_OBJEXT.
	* lib/am/header-vars.am (EXEEXT, OBJEXT,
	PATH_SEPARATOR): New variables.
	* tests/obsolete2.test: Use AM_FUNC_FNMATCH instead of AM_EXEEXT.

2001-09-23  Tim Van Holder  <tim.van.holder@pandora.be>

	* m4/auxdir.m4, m4/init.m4: Require autoconf 2.50 and rely on it to