@@ -48,12 +48,12 @@ endif ! %?CYGNUS%
 .PHONY: check-DEJAGNU
 check-DEJAGNU: site.exp
 ## Life is easiest with an absolute srcdir, so do that.
-	srcdir=`CDPATH=: && cd $(srcdir) && pwd`; export srcdir; \
+	srcdir=`$(am__cd) $(srcdir) && pwd`; export srcdir; \
 	EXPECT=$(EXPECT); export EXPECT; \
 ## Allow this to work when expect and DejaGNU are in tree.
 ## Only required when --cygnus in force.
 ?CYGNUS?	if [ -f $(top_builddir)/../expect/expect ]; then \
-?CYGNUS?	  TCL_LIBRARY=`CDPATH=: && cd $(top_srcdir)/../tcl/library && pwd`; \
+?CYGNUS?	  TCL_LIBRARY=`$(am__cd) $(top_srcdir)/../tcl/library && pwd`; \
 ?CYGNUS?	  export TCL_LIBRARY; \
 ?CYGNUS?	fi; \
 	runtest=$(RUNTEST); \
