@@ -250,7 +250,7 @@ distcheck: dist
 	mkdir $(distdir)/=inst
 ## Undo the write access.
 	chmod a-w $(distdir)
-	dc_install_base=`CDPATH=: && cd $(distdir)/=inst && pwd` \
+	dc_install_base=`$(am__cd) $(distdir)/=inst && pwd` \
 ?DISTCHECK-HOOK?	  && $(MAKE) $(AM_MAKEFLAGS) distcheck-hook \
 	  && cd $(distdir)/=build \
 	  && ../configure --srcdir=.. --prefix=$$dc_install_base \
