@@ -1,5 +1,16 @@
 2001-10-02  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* Makefile.am (maintainer-check): Don't check for 'cd' calls in m4.
+	* lib/am/tags.am (GTAGS): Use $(am__cd) instead of 'CDPATH=: && cd'.
+	* lib/am/dejagnu.am (check-DEJAGNU): Likewise.
+	* lib/am/distdir.am (distcheck): Likewise.
+	* lib/am/texinfos.am (install-info-am, dist-info): Rewrite without
+	using cd so we don't have to fiddle with CDPATH.
+	* lib/am/header-vars.am (am__cd): Define so as to support Zsh and
+	DOSish path separator.
+
+2001-10-02  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* lib/am/python.am (install-%DIR%PYTHON,
 	uninstall-%DIR%PYTHON): Strip path of source file.
 	(clean-python): Comment out.
